--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -28,7 +28,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          python3 - <<'PY' | tee -a "\$GITHUB_STEP_SUMMARY"
+          python3 - <<'PY' | tee -a "$GITHUB_STEP_SUMMARY"
 import os, sys, xml.etree.ElementTree as ET
 base = 'artifacts'
 paths = []
@@ -59,10 +59,10 @@ PY
           set -euo pipefail
           shopt -s globstar nullglob
           files=(artifacts/**/lcov.info)
-          if [ \${#files[@]} -eq 0 ]; then
-            echo "Line coverage: n/a" | tee -a "\$GITHUB_STEP_SUMMARY"
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "Line coverage: n/a" | tee -a "$GITHUB_STEP_SUMMARY"
             exit 0
           fi
-          pct=\$(awk -F, '/^DA:/{t++; if (\$2>0) c++} END{ if(t) printf("%.2f",100*c/t); else print 0 }' "\${files[@]}")
-          echo "Line coverage: \${pct}%" | tee -a "\$GITHUB_STEP_SUMMARY"
-          awk -v p="\$pct" -v min="\${COVERAGE_MIN:-10}" 'BEGIN{ exit (p+0 >= min+0) ? 0 : 1 }'
+          pct=$(awk -F, '/^DA:/{t++; if ($2>0) c++} END{ if(t) printf("%.2f",100*c/t); else print 0 }' "${files[@]}")
+          echo "Line coverage: ${pct}%" | tee -a "$GITHUB_STEP_SUMMARY"
+          awk -v p="$pct" -v min="${COVERAGE_MIN:-10}" 'BEGIN{ exit (p+0 >= min+0) ? 0 : 1 }'
