ci(summary): dynamic coverage gate (18% on main, 15% elsewhere)

--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -21,7 +21,7 @@ jobs:
   aggregate:
     runs-on: ubuntu-latest
     env:
-      COVERAGE_MIN: "18"
+      COVERAGE_MIN: ${{ github.ref == 'refs/heads/main' && '18' || '15' }}
       REPO: ${{ github.repository }}
     steps:
       - name: Resolve run_id and download artifacts
