--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ prost-build = "0.12"
 # ---- tracing + otel (m2) ----
 opentelemetry-jaeger = { version = "0.21", features = ["rt-tokio"] }
 rand = "0.8"
+[dev-dependencies]
+assert_cmd = "2"
+predicates = "3"
