--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -13,6 +13,11 @@ on:
     branches: [ main ]
   pull_request:
 
+# ✅ needed so GH_TOKEN can read Actions artifacts
+permissions:
+  actions: read
+  contents: read
+
 concurrency:
   group: ci-summary-${{ github.ref }}
   cancel-in-progress: true
@@ -22,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REPO: ${{ github.repository }}
-      GH_TOKEN: ${{ github.token }}   # <-- give gh CLI credentials for ALL steps
+      GH_TOKEN: ${{ github.token }}
       COVERAGE_MIN: "18"
     steps:
       - name: Resolve run_id
@@ -32,15 +37,12 @@ jobs:
         run: |
           set -euo pipefail
           RID=""
-          # 1) workflow_run payload
           if [ "${{ github.event_name }}" = "workflow_run" ]; then
             RID="${{ github.event.workflow_run.id }}"
           fi
-          # 2) manual input
           if [ -z "${RID}" ] && [ -n "${{ inputs.run_id || '' }}" ]; then
             RID="${{ inputs.run_id }}"
           fi
-          # 3) fallback: CI run for this commit SHA
           if [ -z "${RID}" ]; then
             echo "Resolving run id for '${WF_NAME}' at $GITHUB_SHA"
             RID="$(gh run list -R "${REPO}" --json databaseId,headSha,workflowName -L 50 \
@@ -55,18 +57,32 @@ jobs:
           echo "RID=$RID"
 
       - name: List artifacts on the CI run
-        env:
-          RID: ${{ steps.res.outputs.rid }}
+        env: { RID: ${{ steps.res.outputs.rid }} }
         run: |
           gh api "repos/${REPO}/actions/runs/${RID}/artifacts" \
             --jq '{count: .total_count, names: [.artifacts[].name]}'
 
-      - name: Download artifacts from the CI run
-        env:
-          RID: ${{ steps.res.outputs.rid }}
+      - name: Download artifacts from the CI run (robust)
+        env: { RID: ${{ steps.res.outputs.rid }} }
         run: |
+          set -euo pipefail
           mkdir -p artifacts
-          gh run download -R "$REPO" "$RID" -D artifacts
+          echo "Downloading all artifacts via gh run download…"
+          if ! gh run download -R "$REPO" "$RID" -D artifacts -v; then
+            echo "::warning::gh run download failed; trying per-artifact fallback"
+            mapfile -t IDS < <(gh api "repos/${REPO}/actions/runs/${RID}/artifacts" --jq '.artifacts[].id')
+            if [ ${#IDS[@]} -eq 0 ]; then
+              echo "::error::No artifacts on CI run $RID"; exit 1
+            fi
+            for id in "${IDS[@]}"; do
+              name="$(gh api "repos/${REPO}/actions/artifacts/${id}" --jq -r .name)"
+              echo "Fetching $name (id=$id) via REST…"
+              mkdir -p "artifacts/${name}"
+              gh api -H "Accept: application/octet-stream" \
+                "repos/${REPO}/actions/artifacts/${id}/zip" > "artifacts/${name}.zip"
+              unzip -oq "artifacts/${name}.zip" -d "artifacts/${name}" || true
+            done
+          fi
           echo "Downloaded files:"
           find artifacts -maxdepth 3 -type f | sed -n '1,200p' || true
 
@@ -84,10 +100,8 @@ jobs:
               print("[CI] JUnit: 0 tests, 0 failures, 0 errors, 0 skipped"); sys.exit(0)
           T=F=E=S=0
           for p in paths:
-              try:
-                  root=ET.parse(p).getroot()
-              except Exception:
-                  continue
+              try: root=ET.parse(p).getroot()
+              except Exception: continue
               suites=[root] if root.tag.endswith('testsuite') else root.findall('.//testsuite')
               for ts in suites:
                   T+=int(ts.attrib.get('tests',0) or 0)
@@ -103,60 +117,44 @@ jobs:
       - name: Coverage summary (LCOV → JaCoCo XML fallback)
         shell: bash
         env:
-          IGNORE_RE: '(?!)'   # match nothing; set to 'src/main\.rs$' to ignore that file
+          IGNORE_RE: '(?!)'   # set to 'src/main\.rs$' only if you want to exclude main.rs
         run: |
           set -euo pipefail
           : "${GITHUB_STEP_SUMMARY:=/tmp/STEP_SUMMARY.md}"
           python3 - <<'PY'
           import glob, os, re, xml.etree.ElementTree as ET
           ignore = re.compile(os.environ.get("IGNORE_RE","(?!)"))
-
-          # LCOV with per-file ignore
           pct=None
           for fp in glob.glob('artifacts/**/lcov.info', recursive=True):
-              LF=LH=0
-              sf=None; skip=False
+              LF=LH=0; sf=None; skip=False
               try:
                   with open(fp, encoding="utf-8", errors="ignore") as fh:
                       for line in fh:
                           if line.startswith('SF:'):
-                              sf=line[3:].strip()
-                              skip = bool(ignore.search(sf))
+                              sf=line[3:].strip(); skip=bool(ignore.search(sf))
                           elif line.startswith('LF:') and not skip:
-                              LF += int(line.split(':',1)[1])
+                              LF+=int(line.split(':',1)[1])
                           elif line.startswith('LH:') and not skip:
-                              LH += int(line.split(':',1)[1])
+                              LH+=int(line.split(':',1)[1])
                           elif line.startswith('end_of_record'):
                               sf=None; skip=False
               except Exception:
                   continue
-              if LF:
-                  pct = (LH/LF)*100.0
-                  break
-
-          # JaCoCo fallback
+              if LF: pct=(LH/LF)*100.0; break
           if pct is None:
               covered=missed=0
               for fp in glob.glob('artifacts/**/*.xml', recursive=True):
-                  try:
-                      r=ET.parse(fp).getroot()
-                  except Exception:
-                      continue
+                  try: r=ET.parse(fp).getroot()
+                  except Exception: continue
                   for c in r.findall(".//counter[@type='LINE']"):
-                      covered += int(c.attrib.get('covered','0') or 0)
-                      missed  += int(c.attrib.get('missed','0') or 0)
+                      covered+=int(c.attrib.get('covered','0') or 0)
+                      missed +=int(c.attrib.get('missed','0') or 0)
               tot=covered+missed
-              if tot:
-                  pct = covered/tot*100.0
-
+              if tot: pct=covered/tot*100.0
           if pct is None:
-              print("[CI] Line coverage: not found")
-              print("- Line coverage: not found")
-              raise SystemExit(1)
+              print("[CI] Line coverage: not found"); print("- Line coverage: not found"); raise SystemExit(1)
           else:
-              print(f"[CI] Line coverage: {pct:.2f}%")
-              print(f"- Line coverage: {pct:.2f}%")
+              print(f"[CI] Line coverage: {pct:.2f}%"); print(f"- Line coverage: {pct:.2f}%")
               minv=float(os.environ.get("COVERAGE_MIN","18"))
-              if pct < minv:
-                  raise SystemExit(1)
+              if pct < minv: raise SystemExit(1)
           PY
