--- a/.github/workflows/afl-smoke.yml
+++ b/.github/workflows/afl-smoke.yml
@@ -7,6 +7,8 @@ permissions:
   contents: read
 jobs:
   afl:
+    continue-on-error: true
+  afl:
     runs-on: ubuntu-latest
     timeout-minutes: 12
     steps:
