--- a/.github/workflows/afl-smoke.yml
+++ b/.github/workflows/afl-smoke.yml
@@ -8,6 +8,7 @@ permissions:
 jobs:
   afl:
     continue-on-error: true
+    continue-on-error: true
   afl:
     runs-on: ubuntu-latest
     timeout-minutes: 12
@@ -39,4 +40,4 @@ HEX="$(xxd -p -c 999999 "$1" | tr -d '\n\r\t ')"
 ./target/debug/linux_gateway --decode="0x$HEX" >/dev/null 2>&1 || true
 SH
           chmod +x scripts/afl_decode.sh
-          timeout 60s afl-fuzz -Q -i tests/corpus -o findings -- ./scripts/afl_decode.sh @@ || true
+          timeout 60s afl-fuzz -Q -i tests/corpus -o findings -- ./scripts/afl_decode.sh @@ || true || true
